--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-02 11:59:31 -0500 
+%% Created for Evan Bollig at 2013-09-02 18:01:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{MSIItasca,
+	Date-Added = {2013-09-02 22:59:23 +0000},
+	Date-Modified = {2013-09-02 23:01:09 +0000},
+	Howpublished = {\url{https://www.msi.umn.edu/hpc/itasca}},
+	Month = {June},
+	Title = {Itasca (HP ProLiant BL280c G6 Linux Cluster)},
+	Year = {2013}}
 
 @misc{BolligRBFFixedGrid,
 	Author = {E. F. Bollig},
