Almost done with chapter

--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -46,9 +46,9 @@
 
 \mainmatter
 
-%\include{introduction}
-%\include{related_work}
-%\include{rbffd_method}
+\include{introduction}
+\include{related_work}
+\include{rbffd_method}
 \include{ordering_and_preconditioning}
 %\include{distributed_solver}
 
